<resources>
    <string name="app_name">Store Video Reward</string>
    <string name="nav_title">Store Video Reward</string>
    <string name="nav_sub_title">Video Status</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="isRTL">false</string>
    <string name="admob_privacy_link">https://sites.google.com/view/suit-tv</string>
    <string name="play_more_app">https://play.google.com/store/apps/developer?id=SUIT.TV</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="favorites">Favorites</string>
    <string name="my_download">My Download</string>
    <string name="status_saver">WhatsApp Status Saver</string>
    <string name="upload_video">Upload Video</string>
    <string name="my_video">My Video</string>
    <string name="reward_point">Reward Point</string>
    <string name="reward">Reward</string>
    <string name="reward_money">Reward Money</string>
    <string name="reference_code">Reference Code</string>
    <string name="landscape_status">Landscape Status</string>
    <string name="popular_videos">Popular Videos</string>
    <string name="related_video">Related Video</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="setting">Settings</string>
    <string name="app_name_about_us">abcd</string>
    <string name="about_us_version">Version</string>
    <string name="about_us_version_text">1.0.1(1000)</string>
    <string name="about_us_author">Author</string>
    <string name="about_us_Company">Company</string>
    <string name="about_us_company_name">Aloon Yousef</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">info@aloonyousef.net</string>
    <string name="about_us_website">Website</string>
    <string name="about_us_website_text">aloonyousef.net</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">+91 (000) (000) (0000)</string>
    <string name="about_us_about">About</string>
    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="internet_connection">Internet connection not available</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="cannot_use_save_permission">Can not use share and download future allow storage permission</string>
    <string name="cannot_use_upload_allow">Can not use Upload future allow storage permission</string>
    <string name="cannot_use_upload_image">Can not Update Profile Image please allow external storage permission</string>
    <string name="main_activity">Main Activity Video Status App</string>
    <string name="loading">Loading..</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus.
        Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie.
    </string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="button_text_login">LOGIN</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="button_text_register">Register</string>
    <string name="button_text_forgot_password">FORGOT PASSWORD ?</string>
    <string name="already_have_an_account_yet">Already have an account yet ?</string>
    <string name="register_login_text">Login</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="name">Name</string>
    <string name="phoneNo">Phone No</string>
    <string name="please_enter_phone">Please enter phone no</string>
    <string name="please_enter_name">please enter name</string>
    <string name="please_enter_full_name">please enter full name</string>
    <string name="please_enter_message">please enter message</string>
    <string name="button_text_skip">Skip</string>
    <string name="textView_forget_password">Forget Password?</string>
    <string name="login_failed">Login Failed</string>
    <string name="see_all">SEE All</string>
    <string name="downloading">Downloading</string>
    <string name="profile">Profile</string>
    <string name="name_profile">Name :-</string>
    <string name="email_profile">Email :-</string>
    <string name="password_profile">Password :-</string>
    <string name="confirm_password_profile">Confirm Password :-</string>
    <string name="phone_profile">Phone :-</string>
    <string name="youtube_profile">Youtube :-</string>
    <string name="instagram_profile">Instagram :-</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Success Full Save Profile</string>
    <string name="password_and_confirmpassword_does_not_match">Password and confirm password does not match</string>
    <string name="action_logout">Logout</string>
    <string name="login">Login</string>
    <string name="enter_code">Enter code</string>
    <string name="custom_settings">Custom Settings</string>
    <string name="enable_push_notification">Enable push notification</string>
    <string name="no_data_found">No Data Found</string>
    <string name="video_title">Video Title</string>
    <string name="video_category_name">Video category name</string>
    <string name="add_thumbnail_file">+ Add Thumbnail File</string>
    <string name="add_video_file">+ Add Video File</string>
    <string name="no_file_selected">Recommended resolution 800x500,650x450</string>
    <string name="no_file_selected_video">Please select maximum 15 mb and 30 second video duration</string>
    <string name="upload">Upload</string>
    <string name="selected_category">Select Category</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="please_wait">Loading....</string>
    <string name="please_enter_title">Please enter title</string>
    <string name="please_select_image">Please select image</string>
    <string name="please_select_category">Please select category</string>
    <string name="please_select_video">Please select video</string>
    <string name="delete">Delete</string>
    <string name="you_have_not_login">You have not login</string>
    <string name="you_have_not_onFollow">You cannot follow yourself</string>
    <string name="file_size">your selected file size is more than 15 mb. please select maximum 15 mb file</string>
    <string name="file_size_duration">your selected video duration more than 30 second. please select 30 second or less video</string>
    <string name="file_type">please select mp4 video file</string>
    <string name="file_type_extension">.mp4</string>
    <string name="please_install_whatsapp">Please Install WhatsApp</string>
    <string name="please_install_instagram">Please Install Instagram</string>
    <string name="please_install_facebook">Please Install Facebook</string>
    <string name="please_install_twitter">Please Install Twitter</string>
    <string name="reward_point_claim">Reward Point Claim</string>
    <string name="detail">Payment Detail</string>
    <string name="please_enter_detail">Please enter detail</string>
    <string name="share">Share</string>
    <string name="you_have_already_download_video">You have already download video</string>
    <string name="your_reference_code">Your Reference Code</string>
    <string name="user_point">User Point</string>
    <string name="approve">Approve</string>
    <string name="pending">Pending</string>
    <string name="reject">Reject</string>
    <string name="notification">notification</string>
    <string name="you_have">You Have</string>
    <string name="Uploading">Uploading....</string>
    <string name="point">Point</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="view">view</string>
    <string name="copy_text">Copy Text</string>
    <string name="bank_detail">Please select your transaction type and fill the details and admin will soon contact you.</string>
    <string name="reference_code_detail">Share you reference code to others and earn more points.</string>
    <string name="view_all">View All</string>
    <string name="current_point">Current Point</string>
    <string name="withdrawal_history">Withdrawal History</string>
    <string name="equal">=</string>
    <string name="wrong">something went to wrong please try again later</string>
    <string name="minimum">Minimum</string>
    <string name="point_require">Reward point is required to claim</string>
    <string name="textView_myUpload_des">Your uploaded video</string>
    <string name="history">History</string>
    <string name="tab_to_copy">Tap To Copy</string>
    <string name="no_more_data">No more data</string>
    <string name="download_later">First off  video download complete then after new video download</string>
    <string name="ready_to_upload">Ready to upload....</string>
    <string name="please_enter_verification_code">Please enter verification code</string>
    <string name="verification_message">Verification code does not match</string>
    <string name="re_register">Again Registration</string>
    <string name="opt_contain">We Have Send OTP On Your Email</string>
    <string name="verify">verify</string>
    <string name="resend_your_otp">Resend Your Otp</string>
    <string name="click_hear">Click Here</string>
    <string name="title_verification">Enter Verification Code</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="locally_cached_data">locally cached data</string>
    <string name="no_comment_found">No Comment Found</string>
    <string name="comment">Comment</string>
    <string name="mb">MB</string>
    <string name="size">size</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="allcomment">All Comment</string>
    <string name="please_enter_comment">Please enter comment</string>
    <string name="today">Today</string>
    <string name="contact_us">Contact Us</string>
    <string name="your_message">Your Message</string>
    <string name="faq">Faq</string>
    <string name="got_it">GOT IT</string>
    <string name="bottom_sheet_option_title">QUICK SHARE AND REPORT</string>
    <string name="report">Report</string>
    <string name="share_is_caring">Sharing is caring</string>
    <string name="report_sub">Will check what\'s wrong</string>
    <string name="copyright">Copyright</string>
    <string name="sexual">Sexual</string>
    <string name="other">Other</string>
    <string name="tell_us">Tell us</string>
    <string name="welcome_title_one">Unlimited Status Video</string>
    <string name="welcome_title_two">Reward Points</string>
    <string name="welcome_description_one">You can gaze at videos different category wise, most popular and latest.</string>
    <string name="welcome_description_two">Watch/Upload status videos and gain rewards points and earn money from that.</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="value">0</string>
    <string name="post_video">Post Video</string>
    <string name="info">Buy this App from Codecanyon only.Aloon Yousef Owned the copyright for this App.WhatsApp: +9100000000</string>
</resources>